@@ -1,4 +1,8 @@
-﻿drkns 03.05.2016 11:28:32 +0200 - build 4658
+﻿drkns 03.05.2016 13:51:34 +0200 - build 4659
+
+1. 0003229: Removing mounted VHDX files from the drive menu makes file locked
+
+drkns 03.05.2016 11:28:32 +0200 - build 4658
 
 1. 0003228: Shell команда CD не находит путь есть в конце выполняемой стоки стоит пробел
 
